# jeopardy-app.github.io

./: CHANGELOG.md  figlet  jeopardy.cabal  result  stack.yaml
nix/: base.nix
src/: .#Main.hs  Index.hs  Main.hs
