cabal-version:       2.4
name:                jeopardy
version:             0.1.0.0

executable jeopardy
  main-is:             Main.hs
  other-modules:
     Index
  build-depends:       base ^>=4.12.0.0
   , Shpadoinkle
   , Shpadoinkle-backend-snabbdom
   , Shpadoinkle-backend-static
   , Shpadoinkle-html
   , bytestring
   , jsaddle-warp
   , text

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities

  ghcjs-options:
    -Wall
    -Werror
    -Wcompat
    -fno-warn-missing-home-modules
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities
    -O2


